Allow wrapping of inline code in table cells and fix line-height

--- a/.storybook/base.css
+++ b/.storybook/base.css
@@ -7,3 +7,8 @@ body {
 table {
     width: 100%;
 }
+
+code.css-1kwwth4 {
+    line-height: unset;
+    white-space: normal;
+}
